--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main{
 header{
     position: fixed;
    width: 100%;
-   height:80px;
+   
    background-color: red;
    border:solid white 2px;
 }
@@ -47,18 +47,31 @@ header{
     font-size: large;
 }
 .logo img{
-    width: 100%;
     transition: 0.3s;
+    width: 20%;
+    height:100%;
+    cursor: pointer;
+   
+    
 }
+
+
 .logo img:hover{
     transform: rotate(180deg);
 }
 .logo{
-max-width: 1700px;
-width: 6%;
+    width: 30%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
 }
 .search-iput{
-    width: 200px;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 
 }
 .search-iput input{
@@ -69,6 +82,7 @@ width: 6%;
     border-radius: 5px;
     
 }
+
 .left-navbar{
     position: fixed;
 background: red;
@@ -76,5 +90,18 @@ margin-top:80px ;
     width: 15%;
     height:100vh;
     border:solid white 2px;
-    //display: none;
+   display: none;
+}
+.fa-search{
+    color: rgb(255, 255, 255);
+    display: flex;
+    text-align: center;
+   align-items: center;
+    font-size: 1.4rem;
+    padding: 2px;
+    background-color: red;
+    
+   
+    
+  
 }
