--- a/style.css
+++ b/style.css
@@ -39,12 +39,18 @@ header{
 }
 .nav-bar li{
     list-style: none;
-    padding: 20px;
+  
+}
+.nav-bar li a:hover{
+    background-color: #fff;
+    color: red;
+    border-radius: 5px;
 }
 .nav-bar a{
     text-decoration: none;
     color: #fff;
-    font-size: large;
+    font-size: 1.4rem;
+ padding: 25px;
 }
 .logo img{
     transition: 0.3s;
@@ -55,53 +61,59 @@ header{
     
 }
 
-
 .logo img:hover{
     transform: rotate(180deg);
 }
 .logo{
-    width: 30%;
+    width: 40%;
     display: flex;
     text-align: center;
+   
     align-items: center;
-    justify-content: space-around;
+  
 }
-.search-iput{
-    width: 70%;
+.search-input{
+   margin-left: 5%;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    transition: 0.5s;
 
 }
-.search-iput input{
-    height: 1.7rem;
+
+.search-input input{
+    height: 2rem;
     border: 0ch;
     outline: 0;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     
 }
-
-.left-navbar{
-    position: fixed;
-background: red;
-margin-top:80px ;
-    width: 15%;
-    height:100vh;
-    border:solid white 2px;
-   display: none;
+::placeholder{
+    color: red;
+    font-style: italic;
+    font-weight: lighter;
+    
 }
 .fa-search{
     color: rgb(255, 255, 255);
     display: flex;
     text-align: center;
-   align-items: center;
-    font-size: 1.4rem;
+    align-items: center;
+    font-size: 1.2rem;
     padding: 2px;
-    background-color: red;
-    
-   
-    
+    cursor: pointer;
+    background-color: red;  
   
+}
+
+.left-navbar{
+    position: fixed;
+    background: red;
+    margin-top: 70px;
+    width: 15%;
+    height:100vh;
+    border:solid white 2px;
+  // display: none;
 }
