--- a/style.css
+++ b/style.css
@@ -9,22 +9,19 @@ box-sizing: border-box;
 }
 
 body{
-height:300vh;
+background: grey;
 
 }
-main{
-    width: 100%;
-    height: 100vh;
-    border-bottom:solid white 2px;
-    
-}
+
     
 header{
-    position: fixed;
-   width: 100%;
-   
+   position: relative;
+   width: 90%;
+   margin: 0 auto;
    background-color: red;
+   border-radius: 5px;
    border:solid white 2px;
+   position: relative;
 }
 .nav-bar{
   
@@ -50,7 +47,8 @@ header{
     text-decoration: none;
     color: #fff;
     font-size: 1.4rem;
- padding: 25px;
+ padding: 20px;
+ transition: all 0.6s;
 }
 .logo img{
     transition: 0.3s;
@@ -91,9 +89,12 @@ header{
     
 }
 ::placeholder{
-    color: red;
+    color: grey;
+    font-size: 12px;
+    text-align: left;
     font-style: italic;
-    font-weight: lighter;
+    font-weight: 100;
+    
     
 }
 .fa-search{
@@ -115,5 +116,37 @@ header{
     width: 15%;
     height:100vh;
     border:solid white 2px;
-  // display: none;
+    display: none;
 }
+
+    
+
+.container{
+    margin: 0 auto;
+    margin-top:1%;
+    width:90%;
+    
+    border-radius: 0.5rem;
+    background-color: red;
+  
+} 
+.first h1{
+color:white;    
+text-align: center;
+padding: 20px;
+text
+
+}
+.container img{
+    width: 20%;
+    float: left;
+    margin: 5px;
+    border-radius: 5px;
+}
+.container p{
+    color: white;
+    margin-top: 20px;
+}
+
+
+
