--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ header{
     border:2px solid #fff;
     border-radius: 0.5rem;
     background-color: red;
-    background:  linear-gradient(#900404, #e01818);;
+    background:  linear-gradient(#900404, #b40606);;
   
 } 
 .first h1{
