--- a/style.css
+++ b/style.css
@@ -59,13 +59,14 @@ header{
     text-decoration: none;
     color: #fff;
     font-size: 1.4rem;
- padding: 20px;
+    margin: 5px;
+ padding: 8px;
  transition: all 0.6s;
  font-family:glakho;
 }
 .logo img{
     transition: 0.3s;
-    width: 20%;
+    width: 10%;
     height:100%;
     cursor: pointer;
     border-radius: 50%;
@@ -76,7 +77,7 @@ header{
     transform: rotate(180deg);
 }
 .logo{
-    width: 40%;
+    width: 50%;
     display: flex;
     text-align: center;
     align-items: center;
@@ -118,7 +119,7 @@ header{
     padding: 2px;
     cursor: pointer;
     background-color: red;  
-    background: transparent;
+    background: transparent ;
     transition:  all 0.3s;
 }
 .fa-search:hover{
@@ -126,18 +127,19 @@ header{
 }
 
 .left-navbar{
-    position: fixed;
-    background: red;
-    margin-top: 70px;
-    width: 15%;
-    height:100vh;
-    border:solid white 2px;
-    display: none;
+   width: 20%;
+   height: 95vh;
+   background: blue;
+   position:absolute;
+   top: 0%;
+
+ 
 }
 
     
 
 .container{
+    position: relative;
     margin: 0 auto;
     margin-top:1%;
     width:90%;
@@ -147,7 +149,7 @@ header{
     background:  linear-gradient(#900404, #b40606);;
   
 } 
-.first h1{
+.container h1{
 color:white;    
 text-align: center;
 padding: 20px;
